--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.14.0",
+    "@mantine/core": "^8.3.13",
+    "@mantine/form": "^8.3.13",
+    "@mantine/hooks": "^8.3.13",
+    "@tabler/icons-react": "^3.36.1",
     "next": "16.1.3",
+    "next-intl": "^4.7.0",
+    "postcss-preset-mantine": "^1.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
