--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && npx prisma db push && next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -22,6 +22,7 @@
     "@vercel/blob": "^2.1.0",
     "next": "^16.1.6",
     "next-intl": "^4.7.0",
+    "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "postcss-preset-mantine": "^1.18.0",
     "react": "19.2.3",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.10",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
